crates/parse/src/grammar/snapshots/mcfunction_parse__grammar__coord__tests__relative_empty.snap
---
source: crates/parse/src/grammar/coord.rs
expression: "parse_coord(\"~ ~ ~7\")"
---
Group(Coord) at 0:0 - 0:6 {
    Group(CoordPart) at 0:0 - 0:1 {
        Token(Tilde) `~` at 0:0 - 0:1
    }
    Token(Whitespace) ` ` at 0:1 - 0:2
    Group(CoordPart) at 0:2 - 0:3 {
        Token(Tilde) `~` at 0:2 - 0:3
    }
    Token(Whitespace) ` ` at 0:3 - 0:4
    Group(CoordPart) at 0:4 - 0:6 {
        Token(Tilde) `~` at 0:4 - 0:5
        Joined(Float) `7` at 0:5 - 0:6
    }
}

